# GStreamer_Cmake_Template

./: .gitignore  CMakeLists.txt  main.c  mp3play.c  mp3play_multi.c  mp3send_multisrc_udpsink.c  readme.md
